--- a/app/scripts/views/main/pintuan.html
+++ b/app/scripts/views/main/pintuan.html
@@ -1,4 +1,4 @@
-<div>
+<div class="dashboard-page ">
     <div hjm-grid store="pintuanList.store" columns="pintuanList.columns" search="pintuanList.search"
          page-info="pintuanList.pageInfo"></div>
 </div>
