--- a/app/scripts/views/contatiner/main.html
+++ b/app/scripts/views/contatiner/main.html
@@ -18,7 +18,7 @@
                 <side-widgets></side-widgets>
             </perfect-scrollbar>
         </aside>
-        <section id="body-container" ui-view="">
+        <section id="body-container" ui-view ngAnimateSwap>
         </section>
     </section>
 </div>
