--- a/app/scripts/views/biz/aaa_examplate/list.html
+++ b/app/scripts/views/biz/aaa_examplate/list.html
@@ -1,4 +1,3 @@
 <div class="dashboard-page ">
-    <div hjm-grid store="pintuanList.store" columns="pintuanList.columns" search="pintuanList.search"
-         page-info="pintuanList.pageInfo"></div>
+    <div hjm-grid modid="exportList" config="config" columns="columns"></div>
 </div>
