--- a/app/scripts/views/biz/role/list.html
+++ b/app/scripts/views/biz/role/list.html
@@ -1,3 +1,3 @@
 <div class="dashboard-page ">
-    <div hjm-grid modid="accountList" config="config" columns="columns"></div>
+    <div hjm-grid modid="roleList" config="config" columns="columns"></div>
 </div>
