--- a/app/scripts/views/directive/hjm/hjm-pagination-bar.html
+++ b/app/scripts/views/directive/hjm/hjm-pagination-bar.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="pull-right">
+<!--<div>-->
+    <pagination total-items="pageInfo.totalItems" ng-model="pageInfo.currentPage" items-per-page="pageInfo.itemsPerPage"
+                max-size="pageInfo.maxSize" ng-change="getapi(pageInfo.currentPage)" class="pagination"
+                boundary-links="true"
+                rotate="false" num-pages="numPages" previous-text="&lsaquo;" next-text="&rsaquo;"
+                first-text="&laquo;" last-text="&raquo;"></pagination>
+</div>
