--- a/app/scripts/views/directive/show_image.html
+++ b/app/scripts/views/directive/show_image.html
@@ -1,8 +1,8 @@
 <div>
     <div ng-click="show();" ng-if="url">
-        <img class="img-responsive pointer hjm_image_radius" ng-src="{{url}}" alt="">
+        <img class="img-responsive pointer show_image_radius" ng-src="{{url}}" alt="">
     </div>
     <script type="text/ng-template" id="show.html">
-        <img class="img-responsive center-block hjm_image_radius" ng-src="{{url}}">
+        <img class="img-responsive center-block show_image_radius" ng-src="{{url}}">
     </script>
 </div>
