--- a/app/scripts/views/biz/order/list.html
+++ b/app/scripts/views/biz/order/list.html
@@ -1,3 +1,3 @@
 <div class="dashboard-page ">
-    <div hjm-grid modid="productList" config="config" columns="columns"></div>
+    <div hjm-grid modid="orderList" config="config" columns="columns"></div>
 </div>
