--- a/app/scripts/views/contatiner/login.html
+++ b/app/scripts/views/contatiner/login.html
@@ -1,8 +1,8 @@
-<div class="login-page ng-scope">
+<div class="login-page">
     <style>
-        .progress-button.login {
-            background: 0 0;
-        }
+        /*.progress-button.login {*/
+            /*background: 0 0;*/
+        /*}*/
     </style>
     <div class="row">
         <div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
