增加列表的路由展示，groupbtn以及自动搜索功能

--- a/app/scripts/views/directive/common_form.html
+++ b/app/scripts/views/directive/common_form.html
@@ -1,4 +1,4 @@
-<div class="pull-right">
+<div class="">
     <style type="text/css">
         .bot_margin_20 {
             margin-bottom: 0 !important;
@@ -26,6 +26,6 @@
             </div>
         </div>
     </script>
-    <a class="btn btn-default pull-right btn-xs" ng-click="open()" ng-bind="form_title"></a>
+    <a class="btn btn-default {{btnClass}}" ng-click="open()" ng-bind="form_title"></a>
     <!--<a class="btn btn-default pull-right" ng-click="refresh()">1111111</a>-->
 </div>
