--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -10058,3 +10058,43 @@ html, body {
 }
 
 /*directive show_images*/
+/*表单*/
+.form_dangus {
+    border-color: #E21100;
+}
+
+.form_label_dangus {
+    color: #E21100;
+    vertical-align: middle;
+    font-size: 24px;
+}
+
+/*表单*/
+/*msgToast*/
+.mod_msg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    text-align: center;
+    color: #fff;
+
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+
+    display: -webkit-box;
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+}
+
+.mod_msg span {
+    display: inline-block;
+    padding: 10px 20px;
+    line-height: 20px;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.7);
+    -webkit-border-radius: 5px;
+}
+
+/*msgToast*/
