--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -10098,3 +10098,18 @@ html, body {
 }
 
 /*msgToast*/
+input.ng-pristine {
+    /*background-color: white;*/
+}
+
+input.ng-dirty {
+    background-color: lightyellow;
+}
+
+input.ng-valid {
+    /*background-color: lightgreen;*/
+}
+
+input.ng-invalid {
+    background-color: pink;
+}
