--- a/app/scripts/views/directive/hjm/hjm-search-bar.html
+++ b/app/scripts/views/directive/hjm/hjm-search-bar.html
@@ -1,45 +1,9 @@
-<div class="row">
+<div class="row" ng-keyup="search_keyup($event)">
     <div class="col-sm-12">
         <div class="panel panel-default">
-            <!--<div class="panel-body">-->
-            <!--<div class="btn-group" role="group">-->
-            <!--<div class="btn-group" role="group">-->
-            <!--<button type="button" class="btn btn-primary">Primary</button>-->
-            <!--<button type="button" class="btn btn-default">Info</button>-->
-            <!--</div>-->
-            <!--<div class="btn-group" role="group">-->
-            <!--<button type="button" class="btn btn-default">Warning</button>-->
-            <!--</div>-->
-            <!--<div class="btn-group" role="group">-->
-            <!--<button type="button" class="btn btn-default">Danger</button>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--<button class="btn btn-default" ladda="loading" ng-click="clickBtn()">-->
-            <!--Button-->
-            <!--</button>-->
-            <!--</div>-->
             <div class="panel-body">
-                <div class="form-horizontal" ng-keypress="search_keypress($event)">
-                    <!--<div class="form-group col-sm-6">-->
-                    <!--<label class="col-sm-2 control-label">item.text</label>-->
-                    <!--<div class="col-sm-10">-->
-                    <!--<input type="input" class="form-control" placeholder="dsadsa"-->
-                    <!--ng-model="params.activity">-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="form-group col-sm-6" ng-repeat="item in searchItems">-->
-                    <!--<label class="col-sm-2 control-label">{{item.text}}</label>-->
-                    <!--<div class="col-sm-10">-->
-                    <!--<input type="input" class="form-control" placeholder="{{item.placeholder}}"-->
-                    <!--ng-model="params.{{item.value}}">-->
-                    <!--</div>-->
-                    <!--</div>-->
+                <div class="form-horizontal">
                     <div class="searchParam"></div>
-                    <!--<div class="form-group col-sm-12">-->
-                        <!--<a class="btn btn-info btn-outline search-btn" ng-click="search($event)">-->
-                            <!--&nbsp;&nbsp;&nbsp;查询&nbsp;&nbsp;&nbsp;-->
-                        <!--</a>-->
-                    <!--</div>-->
                 </div>
             </div>
         </div>
