--- a/app/scripts/views/directive/hjm_content2img.html
+++ b/app/scripts/views/directive/hjm_content2img.html
@@ -34,7 +34,7 @@
                 <show-textarea ng-model="item.contentData" placeholder="填写你要说的"></show-textarea>
             </div>
             <div class="col-sm-12" ng-if="!!item.showImg">
-                <show-upload images="item.images" hasimages=""></show-upload>
+                <show-upload images="item.pics" hasimages=""></show-upload>
             </div>
         </div>
     </div>
