--- a/app/scripts/views/goods/add.html
+++ b/app/scripts/views/goods/add.html
@@ -263,7 +263,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">图文详情＊<span
+                            <label class="col-sm-3 control-label">图文详情<span
                                     class="form_label_dangus">*</span></label>
 
                             <div class="col-sm-9">
