--- a/app/scripts/views/biz/product/update.html
+++ b/app/scripts/views/biz/product/update.html
@@ -4,64 +4,66 @@
             <h3 class="panel-title">新增商品</h3>
         </div>
         <div class="panel-body">
-            <form class="form-horizontal" name="hjmForm" novalidate>
+            <form class="form-horizontal" name="FormBody" novalidate>
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>商品信息</h4>
-                        <div hjm-form-input text="商品标题" ng-model="param.product_title"
-                             placeholder="商品标题" min="2" required></div>
-                        <div hjm-form-input text="商品简介" ng-model="param.product_title1"
-                             placeholder="不超过30个字" min="1" max="30" required></div>
-                        <div hjm-form-radio text="商品品类" type="radio"
-                             ng-model="param.product_title3"
-                             source="[{text:'鲜花',value:1},{text:'其他',value:2}]" source-api=""></div>
-                        <div hjm-form-radio text="商品类型" type="radio"
-                             ng-model="param.product_title4"
+                        <div form-input text="商品ID" ng-model="param.product_id"
+                             ng-show="$stateParams.product_id"
+                             placeholder="商品ID" ng-disabled="$stateParams.product_id == param.product_id"></div>
+                        <div form-input text="商品标题" ng-model="param.title" placeholder="商品标题" required="true"></div>
+                        <div form-input text="商品简介" ng-model="param.brief"
+                             placeholder="不超过30个字" min="1" max="30" required="true"></div>
+                        <div form-radio text="商品品类" ng-model="param.sku" required="true"
+                             source="[{text:'鲜花',value:'1'},{text:'其他',value:'0'}]" source-api=""></div>
+                        <div form-radio text="商品类型" ng-model="param.frequency_type" required="true"
                              source="[{text:'单次',value:1},{text:'包月',value:2}]" source-api=""></div>
-                        <div hjm-form-input text="商品单位" ng-model="param.product_title5" required></div>
-                        <div hjm-form-input text="库存总数" ng-model="param.product_title6" required></div>
-                        <div hjm-form-input text="单次限购份数" ng-model="param.product_title7"
-                             min="1" max="30" required></div>
-                        <div hjm-form-date text="上架时间" ng-model="param.product_title8" required></div>
-                        <div hjm-form-date-time text="下架时间" ng-model="param.product_title9" required></div>
-                        <div hjm-form-image text="大头图" ng-model="param.product_title10" required></div>
-                        <div hjm-form-image text="横图" ng-model="param.product_title11" max="1" required></div>
-                        <div hjm-form-image-content text="图文详情" ng-model="param.product_title12" required></div>
+                        <div form-input text="商品单位" ng-model="param.price_label" required="true"></div>
+                        <div form-input text="库存总数" ng-model="param.origin_inventory" type="number"
+                             required="true"></div>
+                        <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
+                             min="1" max="30" required="true"></div>
+                        <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
+                        <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
+                        <div form-image text="运营大图" ng-model="param.pics" max="1" required="true"></div>
+                        <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="10" required="true"></div>
+                        <div form-image-content text="图文详情" ng-model="param.contents" required="true"></div>
                     </div>
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>拼团规则</h4>
-                        <div hjm-form-radio text="互助团类型" type="radio" ng-model="param.product_title20"
-                             source="[{text:'砍价团',value:1},{text:'人数团',value:2}]" source-api=""></div>
-                        <div hjm-form-input text="玩法说明标题" ng-model="param.product_title21"
-                             placeholder="玩法说明标题" required></div>
-                        <div hjm-form-textarea text="玩法说明内容" ng-model="param.product_title22"
-                             placeholder="玩法说明内容" required></div>
+                        <div form-radio text="互助团类型" type="radio" ng-model="param.category" required="true"
+                             source="[{text:'砍价团',value:'1'},{text:'人数团',value:'2'}]" source-api=""></div>
+                        <div form-input text="玩法说明标题" ng-model="param.play_subject"
+                             placeholder="玩法说明标题" required="true"></div>
+                        <div form-textarea text="玩法说明内容" ng-model="param.play_introduction"
+                             placeholder="玩法说明内容" required="true"></div>
 
-                        <div hjm-form-input text="起始价" ng-model="param.product_title23" ng-required=""
-                             ng-if="param.product_title20==1"></div>
-                        <div hjm-form-input text="底价" ng-model="param.product_title24" ng-required=""
-                             ng-if="param.product_title20==1"></div>
-                        <div hjm-form-input text="单人返现金额" ng-model="param.product_title25" ng-required=""
-                             ng-if="param.product_title20==1"></div>
-                        <div hjm-form-input text="拼团有效期" ng-model="param.product_title26" ng-required=""
-                             ng-if="param.product_title20==1"></div>
+                        <div form-input text="起始价" ng-model="param.high_price" required="true" type="number"
+                             ng-show="param.category==1"></div>
+                        <div form-input text="底价" ng-model="param.bottom_price" required="true" type="number"
+                             ng-show="param.category==1"></div>
+                        <div form-input text="单人返现金额" ng-model="param.per_cut_amount" required="true" type="number"
+                             ng-show="param.category==1"></div>
 
-                        <div hjm-form-input text="拼团人数" ng-model="param.product_title27" ng-required=""
-                             ng-if="param.product_title20==2"></div>
-                        <div hjm-form-input text="拼团单价" ng-model="param.product_title28" ng-required=""
-                             ng-if="param.product_title20==2"></div>
-                        <div hjm-form-input text="拼团有效时间" ng-model="param.product_title29" ng-required=""
-                             ng-if="param.product_title20==2"></div>
+                        <div form-input text="拼团人数" ng-model="param.group_min_num" required="true" type="number"
+                             ng-show="param.category==2"></div>
+                        <div form-input text="拼团单价" ng-model="param.price" required="true" type="number"
+                             ng-show="param.category==2"></div>
+
+                        <div form-input text="拼团有效时间(小时)" ng-model="param.group_seconds" required="true"
+                             type="number" placeholder="单位:小时"></div>
                     </div>
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>配送规则</h4>
-                        <div hjm-form-input text="配送次数" ng-model="param.product_title30" required=""></div>
-                        <div hjm-form-input text="配送城市" ng-model="param.product_title31" required=""></div>
-                        <div hjm-form-radio text="配送城市" type="radio" ng-model="param.product_title32"
+                        <div form-input text="配送次数" ng-model="param.frequency_num" type="number" required="true"></div>
+                        <div form-radio text="物流" ng-model="param.delivery_type" required="true"
+                             source="[{text:'顺丰配送',value:'1'},{text:'商家负责配送',value:'2'},{text:'无配送',value:'3'}]"
+                             source-api=""></div>
+                        <div form-checkbox text="配送城市" ng-model="param.visible_cities" required="true"
                              source="[{text:'上海',value:'上海'},{text:'南京',value:'南京'},
                              {text:'厦门',value:'厦门'},{text:'北京',value:'北京'}]" source-api=""></div>
                     </div>
@@ -69,13 +71,14 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>管理</h4>
-                        <div hjm-form-textarea text="管理备注" ng-model="param.product_title33" required=""></div>
-                        <div hjm-form-radio text="置顶" type="radio" ng-model="param.product_title34"
-                             source="[{text:'是',value:'上海'},{text:'否',value:'南京'}]" source-api=""></div>
+                        <div form-textarea text="管理备注" ng-model="param.admin_remark" required="true"></div>
+                        <div form-radio text="置顶" ng-model="param.order_by" required="true"
+                             source="[{text:'是',value:'1'},{text:'否',value:'0'}]" source-api=""></div>
                     </div>
                 </div>
-                <a class="btn btn-primary btn-rounded" ng-disabled="hjmForm.$invalid" ng-click="submit()">提交</a>
-                <a class="btn btn-info btn-rounded" ng-disabled="hjmForm.$invalid" ng-click="submit(0)">保存草稿</a>
+                <a class="btn btn-info btn-rounded" ng-click="submit(0)">保存草稿</a>
+                <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
+                <a class="btn btn-info btn-rounded" ng-click="aaa()">控制台数据</a>
             </form>
         </div>
     </div>
