--- a/app/scripts/views/contatiner/login.html
+++ b/app/scripts/views/contatiner/login.html
@@ -8,7 +8,7 @@
         <div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
             <img src="styles/images/flat-avatar.png" class="user-avatar">
             <h1>回家么管理系统</h1>
-            <form role="form" class="ng-pristine ng-valid" ng-keypress="login_keypress($event);">
+            <form role="form" ng-keypress="login_keypress($event);">
                 <div class="form-content">
                     <div class="form-group">
                         <input type="text" ng-model="uname"
