--- a/app/scripts/views/biz/aaa_examplate/list.html
+++ b/app/scripts/views/biz/aaa_examplate/list.html
@@ -1,3 +1,3 @@
 <div class="dashboard-page ">
-    <div hjm-grid modid="exportList" config="config" columns="columns"></div>
+    <div hjm-grid modid="exportList" config="config" columns="columns" ext-search="ext"></div>
 </div>
