--- a/app/scripts/views/directive/product/product-pattern.html
+++ b/app/scripts/views/directive/product/product-pattern.html
@@ -1,3 +1,9 @@
-<div ng-repeat="item in productPattern">
-    <p ng-if="item.brief" ng-bind="item.brief |characters:6:true" tooltip-placement="bottom" tooltip="{{item.brief}}">
+<div>
+    <p>{{'配送次数:'+data.frequency_num}}</p>
+    <div ng-repeat="item in data.patterns">
+        <p ng-if="item.brief" ng-bind="item.brief |characters:6:true" tooltip-placement="bottom"
+           tooltip="{{item.brief}}">
+    </div>
+    <p>配送城市:</p>
+    <p tooltip-placement="bottom" tooltip="{{cities.join(',')}}">{{cities.join(',')}}</p>
 </div>
