--- a/app/scripts/views/biz/product/update.html
+++ b/app/scripts/views/biz/product/update.html
@@ -1,7 +1,8 @@
 <div class="dashboard-page ">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title">新增商品</h3>
+            <h3 class="panel-title" ng-if="!$stateParams.product_id">新增商品</h3>
+            <h3 class="panel-title" ng-if="$stateParams.product_id">修改商品</h3>
         </div>
         <div class="panel-body">
             <form class="form-horizontal" name="FormBody" novalidate>
@@ -64,8 +65,8 @@
                              source="[{text:'顺丰配送',value:'1'},{text:'商家负责配送',value:'2'},{text:'无配送',value:'3'}]"
                              source-api=""></div>
                         <div form-checkbox text="配送城市" ng-model="param.visible_cities" required="true"
-                             source="[{text:'上海',value:'上海'},{text:'南京',value:'南京'},
-                             {text:'厦门',value:'厦门'},{text:'北京',value:'北京'}]" source-api=""></div>
+                             source="[{text:'上海市',value:'上海市'},{text:'南京市',value:'南京市'},
+                             {text:'厦门市',value:'厦门市'},{text:'北京市',value:'北京市'}]" source-api=""></div>
                     </div>
                 </div>
                 <div class="panel panel-primary">
