--- a/app/scripts/views/biz/banner/update.html
+++ b/app/scripts/views/biz/banner/update.html
@@ -16,10 +16,10 @@
                         <div form-image text="运营位图片" ng-model="_param.pics" max="1" required="true"></div>
                         <div form-date-time text="上线时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下线时间" ng-model="param.end_time" required="true"></div>
-                        <div form-radio text="跳转类型" ng-model="param.category" required="true"
-                             source="[{text:'不跳转任何页面',value:'1'},{text:'跳转至网页',value:'0'}]" source-api=""></div>
+                        <div form-radio text="跳转类型" ng-model="toggle" required="true"
+                             source="[{text:'不跳转任何页面',value:'1'},{text:'跳转至网页',value:'2'}]" source-api=""></div>
                         <div form-input text="URL" ng-model="param.url" placeholder="url" required="true"
-                             ng-if="param.category=='0'"></div>
+                             ng-show="toggle=='2'"></div>
                         <div form-input text="排序数字" ng-model="param.sort_num" type="number"
                              placeholder="排序数字" required="true"></div>
                     </div>
