--- a/app/scripts/views/biz/coupon/update.html
+++ b/app/scripts/views/biz/coupon/update.html
@@ -18,7 +18,7 @@
                         <div form-date-time text="下线时间" ng-model="param.end_time" required="true"></div>
                         <div form-radio text="跳转类型" ng-model="toggle" required="true"
                              source="[{text:'不跳转任何页面',value:'1'},{text:'跳转至网页',value:'2'}]" source-api=""></div>
-                        <div form-input text="URL" ng-model="param.url" placeholder="url"
+                        <div form-input text="URL" ng-model="param.url" placeholder="url" required="true"
                              ng-show="toggle=='2'"></div>
                         <div form-input text="排序数字" ng-model="param.sort_num" type="number"
                              placeholder="排序数字" required="true"></div>
